--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_ID=626768659911-errl9hts0ms9qautajec4qc3r8mbsnue.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 GMAIL_TOPIC_NAME=projects/gen-lang-client-0743259718/topics/gmail-watch-topic
 GMAIL_SUBSCRIPTION_NAME=projects/gen-lang-client-0743259718/subscriptions/gmail-watch-topic-sub
+WEBHOOK_URL=https://dabendan.ddns.net/gmail/webhook
