--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.0",
     "dotenv": "^16.0.0",
     "googleapis": "^126.0.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "nock": "^14.0.10",
+    "supertest": "^7.2.2"
   }
 }
