--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-GOOGLE_PROJECT_ID=gen-lang-client-0743259718
-GOOGLE_CLIENT_ID=626768659911-errl9hts0ms9qautajec4qc3r8mbsnue.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GMAIL_TOPIC_NAME=projects/gen-lang-client-0743259718/topics/gmail-watch-topic
-GMAIL_SUBSCRIPTION_NAME=projects/gen-lang-client-0743259718/subscriptions/gmail-watch-topic-sub
-WEBHOOK_URL=https://dabendan.ddns.net/gmail/webhook
 PORT=3100
+GOOGLE_PROJECT_ID=gen-lang-client-0743259718
+GMAIL_SUBSCRIPTION_NAME=gmail-watch-topic-sub
+GMAIL_TOPIC_NAME=projects/gen-lang-client-0743259718/topics/gmail-watch-topic
+GOOGLE_APPLICATION_CREDENTIALS=/home/ubuntu/.openclaw/workspace/gmail-watcher/credentials.json
