--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@google-cloud/pubsub": "^4.0.0",
     "dotenv": "^16.0.0",
-    "googleapis": "^126.0.0"
+    "googleapis": "^126.0.0",
+    "puppeteer": "^24.37.2"
   },
   "devDependencies": {
     "jest": "^30.2.0",
