fix: restore WEBHOOK_URL to .env and make postcheck strict

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GOOGLE_PROJECT_ID=gen-lang-client-0743259718
 GMAIL_SUBSCRIPTION_NAME=gmail-watch-topic-sub
 GMAIL_TOPIC_NAME=projects/gen-lang-client-0743259718/topics/gmail-watch-topic
 GOOGLE_APPLICATION_CREDENTIALS=/home/ubuntu/.openclaw/workspace/gmail-watcher/credentials.json
+WEBHOOK_URL=https://dabendan.ddns.net/gmail/webhook
