--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-PORT=your-port-number
-GOOGLE_PROJECT_ID=your-project-id
+PORT=3000
 GMAIL_TOPIC_NAME=projects/your-project-id/topics/your-topic-name
-GMAIL_SUBSCRIPTION_NAME=projects/your-project-id/subscriptions/your-subscription-name
-GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/credentials.json
+GMAIL_SUBSCRIPTION_NAME=your-subscription-name
