--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "bin/gmail-watcher.js",
   "scripts": {
     "start": "node bin/gmail-watcher.js service start",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint": "eslint src bin"
   },
   "bin": {
