docs: update install url and author

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "google-api",
     "hooks"
   ],
-  "author": "天選之人",
+  "author": "dabendan",
   "license": "MIT",
   "repository": {
     "type": "git",
